objects/Sales_Zone_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Zone Assignments</relationshipLabel>
        <relationshipName>Sales_Zone_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Zone_Subdivision__c</fullName>
        <formula>Sales_Zone__r.Sales_Region_Identifier__r.Name &amp;&quot;-&quot; &amp; Sales_Zone__r.Name &amp;&quot;-&quot; &amp;TEXT(Sales_Zone__r.SubDivision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region-Zone-Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Zone</label>
        <referenceTo>Sales_Zone__c</referenceTo>
        <relationshipLabel>Sales Zone Assignments</relationshipLabel>
        <relationshipName>Sales_Zone_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Zone Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Zone Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Zone Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>